package SAE;



public interface Observateur {

    public void actualiser(Sujet s);

}
